Complete javascript first homework

--- a/001.html
+++ b/001.html
@@ -10,21 +10,22 @@
     <table>
         <tr>
             <td>
+                <!--神奇寶貝基本資料概要說明-->
                 <table>
                     <tr>
                         <td>編號:#001</td>
                     </tr>
                     <tr>
-                        <td>屬性</td>
+                        <td style="font-size: 25px">屬性</td>
                         <td>
                             <ul>
-                                <li><span  style="background: green; color:honeydew">草系</span></li>
-                                <li><span  style="background: #B404AE; color:honeydew">毒系</span></li>
+                                <li><span style="background: green; color:honeydew">草系</span></li>
+                                <li><span style="background: #B404AE; color:honeydew">毒系</span></li>
                             </ul>
                         </td>
                     </tr>
                     <tr>
-                        <td>招式</td>
+                        <td style="font-size: 25px">招式</td>
                         <td>
                             <ul type="square">
                                 <li>藤編</li>
@@ -35,7 +36,7 @@
                         </td>
                     </tr>
                     <tr>
-                        <td>弱點</td>
+                        <td style="font-size: 25px">弱點</td>
                         <td>
                             <ul type="circle">
                                 <li>火系</li>
@@ -43,9 +44,31 @@
                             </ul>
                         </td>
                     </tr>
+                    <!--進化-->
+                    <tr>
+                        <td style="font-size: 25px">進化</td>
+                        <td>
+                            <img src="https://tw.portal-pokemon.com/play/resources/pokedex/img/pm/cf47f9fac4ed3037ff2a8ea83204e32aff8fb5f3.png" width="100px" height="100px" /> 
+                        </td>
+                        <td>
+                            <img src="arrow_down.png" width="50px" height="50px" />
+                        </td>
+                        <td>
+                            <img src="https://tw.portal-pokemon.com/play/resources/pokedex/img/pm/3245e4f8c04aa0619cb31884dbf123c6918b3700.png" width="100px" height="100px" /> 
+                        </td>
+                        <td>
+                            <img src="arrow_down.png" width="50px" height="50px" />
+                        </td>
+                        <td>
+                            <img src="https://tw.portal-pokemon.com/play/resources/pokedex/img/pm/0186d64c5773c8d3d03cd05dc79574b2d2798d4f.png" width="100px" height="100px" /> 
+                        </td>
+                    </tr>
                 </table>
             </td>
-            <td><img style="margin-left: 200px; display: inline;" src="https://tw.portal-pokemon.com/play/resources/pokedex/img/pm/cf47f9fac4ed3037ff2a8ea83204e32aff8fb5f3.png" width="300px" height="300px"></td>
+            <!--圖示-->
+            <td>
+                <img style="margin-left: 0px; display: inline;" src="https://tw.portal-pokemon.com/play/resources/pokedex/img/pm/cf47f9fac4ed3037ff2a8ea83204e32aff8fb5f3.png" width="300px" height="300px">
+            </td>
         </tr>
     </table>
     <a href="homepage.html">回首頁</a>
