--- a/002.html
+++ b/002.html
@@ -2,29 +2,29 @@
 <html>
 <head>
 <meta charset="utf-8" />
-<title>神奇寶貝圖鑑-妙蛙種子</title>
+<title>神奇寶貝圖鑑-小火龍</title>
 </head>
 <body style="font-family: '微軟正黑體';">
-    <h1 style="margin-bottom:10px">妙蛙種子</h1>
+    <h1 style="margin-bottom:10px">小火龍</h1>
     <hr style=" border-width: 1px; display: inline-block;" align="left" width="800" />
     <table>
         <tr>
             <td>
+                <!--神奇寶貝基本資料概要說明-->
                 <table>
                     <tr>
                         <td>編號:#004</td>
                     </tr>
                     <tr>
-                        <td>屬性</td>
+                        <td style="font-size: 25px">屬性</td>
                         <td>
                             <ul>
                                 <li><span  style="background: #FF4000; color:honeydew">火系</span></li>
-                                
                             </ul>
                         </td>
                     </tr>
                     <tr>
-                        <td>招式</td>
+                        <td style="font-size: 25px">招式</td>
                         <td>
                             <ul type="square">
                                 <li>抓</li>
@@ -35,7 +35,7 @@
                         </td>
                     </tr>
                     <tr>
-                        <td>弱點</td>
+                        <td style="font-size: 25px">弱點</td>
                         <td>
                             <ul type="circle">
                                 <li>水系</li>
@@ -43,9 +43,31 @@
                             </ul>
                         </td>
                     </tr>
+                    <!--進化-->
+                    <tr>
+                        <td style="font-size: 25px">進化</td>
+                        <td>
+                            <img src="https://tw.portal-pokemon.com/play/resources/pokedex/img/pm/d0ee81f16175c97770192fb691fdda8da1f4f349.png" width="100px" height="100px" /> 
+                        </td>
+                        <td>
+                            <img src="arrow_down.png" width="50px" height="50px" />
+                        </td>
+                        <td>
+                            <img src="https://tw.portal-pokemon.com/play/resources/pokedex/img/pm/285395ca77d82861fd30cea64567021a50c1169c.png" width="100px" height="100px" /> 
+                        </td>
+                        <td>
+                            <img src="arrow_down.png" width="50px" height="50px" />
+                        </td>
+                        <td>
+                            <img src="https://tw.portal-pokemon.com/play/resources/pokedex/img/pm/2050f1fd1283f473d7d048f8631712e7e003f802.png" width="100px" height="100px" /> 
+                        </td>
+                    </tr>
                 </table>
             </td>
-            <td><img style="margin-left: 200px; display: inline;" src="https://tw.portal-pokemon.com/play/resources/pokedex/img/pm/d0ee81f16175c97770192fb691fdda8da1f4f349.png" width="300px" height="300px"></td>
+            <!--圖示-->
+            <td>
+                <img style="margin-left: 0px; display: inline;" src="https://tw.portal-pokemon.com/play/resources/pokedex/img/pm/d0ee81f16175c97770192fb691fdda8da1f4f349.png" width="300px" height="300px">
+            </td>
         </tr>
     </table>
     <a href="homepage.html">回首頁</a>
