--- a/004.html
+++ b/004.html
@@ -2,10 +2,10 @@
 <html>
 <head>
 <meta charset="utf-8" />
-<title>神奇寶貝圖鑑-傑尼龜</title>
+<title>神奇寶貝圖鑑-皮卡丘</title>
 </head>
 <body style="font-family: '微軟正黑體';">
-    <h1 style="margin-bottom:10px">傑尼龜</h1>
+    <h1 style="margin-bottom:10px">皮卡丘</h1>
     <hr style=" border-width: 1px; display: inline-block;" align="left" width="800" />
     <table>
         <tr>
@@ -13,13 +13,13 @@
                 <!--神奇寶貝基本資料概要說明-->
                 <table>
                     <tr>
-                        <td>編號:#007</td>
+                        <td>編號:#025</td>
                     </tr>
                     <tr>
                         <td>屬性</td>
                         <td>
                             <ul>
-                                <li><span  style="background: #2E2EFE; color:honeydew">水系</span></li>
+                                <li><span  style="background: #FACC2E; color:honeydew">雷系</span></li>
                             </ul>
                         </td>
                     </tr>
@@ -27,10 +27,10 @@
                         <td>招式</td>
                         <td>
                             <ul type="square">
-                                <li>泡沫</li>
-                                <li>水槍</li>
-                                <li>火箭頭鎚</li>
-                                <li>高壓幫浦</li>
+                                <li>十萬伏特</li>
+                                <li>電光一閃</li>
+                                <li>高速星星</li>
+                                <li>打雷</li>
                             </ul>
                         </td>
                     </tr>
@@ -38,8 +38,7 @@
                         <td>弱點</td>
                         <td>
                             <ul type="circle">
-                                <li>草系</li>
-                                <li>雷系</li>
+                                <li>地面系</li>
                             </ul>
                         </td>
                     </tr>
@@ -47,26 +46,21 @@
                     <tr>
                         <td style="font-size: 25px">進化</td>
                         <td>
-                            <img src="https://tw.portal-pokemon.com/play/resources/pokedex/img/pm/5794f0251b1180998d72d1f8568239620ff5279c.png" width="100px" height="100px" /> 
+                            <img src="https://tw.portal-pokemon.com/play/resources/pokedex/img/pm/2b3f6ff00db7a1efae21d85cfb8995eaff2da8d8.png" width="100px" height="100px" /> 
                         </td>
                         <td>
                             <img src="arrow_down.png" width="50px" height="50px" />
                         </td>
                         <td>
-                            <img src="https://tw.portal-pokemon.com/play/resources/pokedex/img/pm/a3bc17e6215031332462cc64e59b7922ddd14b91.png" width="100px" height="100px" /> 
+                            <img src="https://tw.portal-pokemon.com/play/resources/pokedex/img/pm/9c28defa939e230800ec0d0c421d9f82c60df77a.png" width="100px" height="100px" /> 
                         </td>
                         <td>
-                            <img src="arrow_down.png" width="50px" height="50px" />
-                        </td>
-                        <td>
-                            <img src="https://tw.portal-pokemon.com/play/resources/pokedex/img/pm/2fe157db59153af8abd636ab03c7df6f28b08242.png" width="100px" height="100px" /> 
-                        </td>
                     </tr>
                 </table>
             </td>
             <!--圖示-->
             <td>
-                <img style="margin-left: 0px; display: inline;" src="https://tw.portal-pokemon.com/play/resources/pokedex/img/pm/5794f0251b1180998d72d1f8568239620ff5279c.png" width="300px" height="300px">
+                <img style="margin-left: 100px; display: inline;" src="https://tw.portal-pokemon.com/play/resources/pokedex/img/pm/2b3f6ff00db7a1efae21d85cfb8995eaff2da8d8.png" width="300px" height="300px">
             </td>
         </tr>
     </table>
