--- a/homepage.html
+++ b/homepage.html
@@ -2,15 +2,23 @@
 <html>
 <head>
 <meta charset="utf-8" />
-<title>神奇寶貝圖鑑</title>
+<title>神奇寶貝介紹</title>
 </head>
 <body>
-    <h1 style="margin-bottom:10px">神奇寶貝圖鑑</h1>
+    <!--作品概要-->
+    <h1 style="margin-bottom:10px">神奇寶貝介紹(精靈寶可夢)</h1>
     <hr style=" border-width: 1px; display: inline-block;" align="left" width="800" />
-    <p>hello</p>
-    <hr style="border-style: inset; margin-top: 0.5em; margin-bottom: 0.5em; border-width: 1px;" align="left" width="800" />
-    <a href="001.html"><img width="100px" height="100px" src="https://tw.portal-pokemon.com/play/resources/pokedex/img/pm/cf47f9fac4ed3037ff2a8ea83204e32aff8fb5f3.png"></img></a>
-    <div style="font-family: '微軟正黑體'; font-size: 30px; font-weight: bold; margin-bottom: 15px">御三家圖鑑</div>
+    <p>最初代開發時間:1995年</p>
+    <p>系列最初發行時間:1996年</p>
+    <p>開發商:任天堂</p>
+    <p>種類:遊戲、動畫、漫畫、卡片遊戲及相關產品</p>
+    <p>全系列神奇寶貝總數:825種</p>
+    <p>活耀時期:1996~現在</p>
+
+    <!--圖鑑區塊-->
+    <div style="font-family: '微軟正黑體'; font-size: 30px; font-weight: bold; margin-bottom: 15px">熱門圖鑑
+        <img width="25px" height="25px" src="https://i.kfs.io/muser/global/10325836v1/cropresize/300x300.jpg" />
+    </div>
     <table>
         <tr style="width:500px; ">
             <td  style="margin-left: 50px; border: 0px solid gainsboro; display: block;">
@@ -18,17 +26,21 @@
                 <div style="font-family: '微軟正黑體'; color:#424242; font-weight: bold;" align="center">妙蛙種子</div>
             </td>
             <td style="width:10px"></td>
-            <td  style="border: 1px solid gainsboro; display: block;">
+            <td  style="border: 0px solid gainsboro; display: block;">
                 <a href="002.html"><img style="width: 100px; height: 100px; display: inline;" src="https://tw.portal-pokemon.com/play/resources/pokedex/img/pm/d0ee81f16175c97770192fb691fdda8da1f4f349.png" align="left" /></a>
                 <div style="font-family: '微軟正黑體'; color:#424242; font-weight: bold;" align="center">小火龍</div>
             </td>
             <td style="width:10px"></td>
-            <td  style="border: 1px solid gainsboro; display: block">
+            <td  style="border: 0px solid gainsboro; display: block">
                 <a href="003.html"><img style="width: 100px; height: 100px; display: inline;" src="https://tw.portal-pokemon.com/play/resources/pokedex/img/pm/5794f0251b1180998d72d1f8568239620ff5279c.png" align="left" /></a>
                 <div style="font-family: '微軟正黑體'; color:#424242; font-weight: bold;" align="center">傑尼龜</div>
             </td>
+            <td style="width:10px"></td>
+            <td  style="border: 0px solid gainsboro; display: block">
+                <a href="004.html"><img style="width: 100px; height: 100px; display: inline;" src="https://tw.portal-pokemon.com/play/resources/pokedex/img/pm/2b3f6ff00db7a1efae21d85cfb8995eaff2da8d8.png" align="left" /></a>
+                <div style="font-family: '微軟正黑體'; color:#424242; font-weight: bold;" align="center">皮卡丘</div>
+            </td>
         </tr>
-        
     </table>
 </body>
 </html>
