Edit homepage content guide style

--- a/homepage.html
+++ b/homepage.html
@@ -4,16 +4,16 @@
 <meta charset="utf-8" />
 <title>神奇寶貝介紹</title>
 </head>
-<body>
+<body style="font-family: '微軟正黑體';">
     <!--作品概要-->
     <h1 style="margin-bottom:10px">神奇寶貝介紹(精靈寶可夢)</h1>
     <hr style=" border-width: 1px; display: inline-block;" align="left" width="800" />
-    <p>最初代開發時間:1995年</p>
-    <p>系列最初發行時間:1996年</p>
-    <p>開發商:任天堂</p>
-    <p>種類:遊戲、動畫、漫畫、卡片遊戲及相關產品</p>
-    <p>全系列神奇寶貝總數:825種</p>
-    <p>活耀時期:1996~現在</p>
+    <p style="font-size: 17px;"><span style="font-weight: bold;">最初代開發時間:</span>1995年</p>
+    <p style="font-size: 17px;"><span style="font-weight: bold;">系列最初發行時間:</span>1996年</p>
+    <p style="font-size: 17px;"><span style="font-weight: bold;">開發商:</span>任天堂</p>
+    <p style="font-size: 17px;"><span style="font-weight: bold;">種類:</span>遊戲、動畫、漫畫、卡片遊戲及相關產品</p>
+    <p style="font-size: 17px;"><span style="font-weight: bold;">全系列神奇寶貝總數:</span>825種</p>
+    <p style="font-size: 17px;"><span style="font-weight: bold;">活耀時期:</span>1996~現在</p>
 
     <!--圖鑑區塊-->
     <div style="font-family: '微軟正黑體'; font-size: 30px; font-weight: bold; margin-bottom: 15px">熱門圖鑑
